@@ -46,3 +46,9 @@ floorf
 ceilf
 modff
 errno
+_fsget1arg
+_fsget2args
+_fsnormalize
+_fsreturnval
+_fsrshift
+_fsswapargs
